--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">VKNews</string>
     <integer name="com_vk_sdk_AppId">5820744</integer>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
